Reversed some fucking bullshit